# hotmint

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: audit.md
.claude/commands/: hm-debug.md  hm-review.md  hm-verify.md  x-commit.md  x-fix.md  x-overhaul.md  x-review.md
.claude/docs/: false-positive-guide.md  review-core.md  technical-patterns.md
.claude/docs/patterns/: api.md  consensus.md  crypto.md  mempool.md  network.md  storage.md
.github/workflows/: ci.yml
crates/evm/execution/: Cargo.toml
crates/evm/execution/src/: executor.rs  lib.rs
crates/evm/node/: Cargo.toml
crates/evm/node/src/: bench.rs  cluster.rs  main.rs
crates/evm/node/tests/: e2e_rpc.rs
crates/evm/precompile/: Cargo.toml
crates/evm/precompile/src/: lib.rs
crates/evm/rpc/: Cargo.toml
crates/evm/rpc/src/: lib.rs
crates/evm/state/: Cargo.toml
crates/evm/state/src/: lib.rs  state.rs
crates/evm/txpool/: Cargo.toml
crates/evm/txpool/src/: lib.rs
crates/evm/types/: Cargo.toml
crates/evm/types/src/: genesis.rs  lib.rs  receipt.rs  tx.rs
crates/hotmint/: Cargo.toml  README.md
crates/hotmint-abci/: Cargo.toml  README.md
crates/hotmint-abci-proto/proto/: abci.proto
crates/hotmint-abci-proto/src/: convert.rs
crates/hotmint-abci/src/: client.rs  protocol.rs  server.rs
crates/hotmint-abci/tests/: e2e_ipc_test.rs  go_e2e_ipc_test.rs  go_ipc_test.rs  ipc_test.rs
crates/hotmint-api/: Cargo.toml  README.md
crates/hotmint-api/src/: http_rpc.rs  lib.rs  rpc.rs  types.rs
crates/hotmint-api/tests/: rpc_test.rs
crates/hotmint-consensus/: Cargo.toml  README.md
crates/hotmint-consensus/benches/: consensus_bench.rs
crates/hotmint-consensus/src/: application.rs  commit.rs  engine.rs  evidence_store.rs  leader.rs  lib.rs  liveness.rs  network.rs  pacemaker.rs  state.rs  store.rs  sync.rs  view_protocol.rs  vote_collector.rs
crates/hotmint-consensus/tests/: e2e.rs  four_node.rs
crates/hotmint-crypto/: README.md
crates/hotmint-crypto/benches/: crypto_bench.rs
crates/hotmint-crypto/src/: aggregate.rs  hash.rs  signer.rs
crates/hotmint-light/: Cargo.toml  README.md
crates/hotmint-light/src/: lib.rs
crates/hotmint-mempool/: Cargo.toml  README.md
crates/hotmint-mempool/src/: lib.rs
crates/hotmint-mgmt/: Cargo.toml  README.md
crates/hotmint-mgmt/src/: cluster.rs  lib.rs  local.rs  remote.rs
crates/hotmint-network/: Cargo.toml  README.md
crates/hotmint-network/src/: codec.rs  service.rs
crates/hotmint-staking/: Cargo.toml  README.md
crates/hotmint-staking/src/: lib.rs  manager.rs  types.rs
crates/hotmint-staking/tests/: staking_test.rs
crates/hotmint-storage/: Cargo.toml  README.md
crates/hotmint-storage/src/: block_store.rs  consensus_state.rs  evidence_store.rs  lib.rs  wal.rs
crates/hotmint-types/: Cargo.toml  README.md
crates/hotmint-types/src/: block.rs  certificate.rs  context.rs  epoch.rs  evidence.rs  lib.rs  message.rs  sync.rs  validator.rs  vote.rs
crates/hotmint/src/: config.rs  lib.rs
docs/: README.md  application.md  architecture.md  cometbft-comparison.md  consensus-engine.md  getting-started.md  mempool-api.md  networking.md  protocol.md  security-audit-and-roadmap.md  storage.md  substrate_port.md  types.md  wire-protocol.md
examples/bench-consensus/: Cargo.toml  README.md
examples/bench-consensus/src/: main.rs
examples/bench-ipc/: Cargo.toml  README.md
examples/bench-ipc/src/: main.rs
examples/cluster-node/: Cargo.toml
examples/cluster-node/src/: main.rs
examples/demo/: Cargo.toml  README.md
examples/demo/src/: main.rs
examples/evm-chain/: Cargo.toml
examples/evm-chain/src/: app.rs  bench.rs  evm_app.rs  evm_tx.rs
examples/utxo-chain/: Cargo.toml  README.md
examples/utxo-chain/src/: app.rs  bench.rs  main.rs  utxo_app.rs  utxo_types.rs
proto/: abci.proto
sdk/go/: abci.go  server.go  server_test.go
sdk/go/cmd/testserver/: main.go
sdk/go/hotmint/proto/abci/: abci.pb.go
sdk/go/proto/abci/: abci.pb.go
tools/hotmint-mgmt/: Cargo.toml
tools/hotmint-mgmt/src/: lib.rs  local.rs  main.rs
