[workspace]
resolver = "2"
members = [
    "crates/hotmint",
    "crates/hotmint-types",
    "crates/hotmint-crypto",
    "crates/hotmint-consensus",
    "crates/hotmint-storage",
    "crates/hotmint-network",
    "crates/hotmint-mempool",
    "crates/hotmint-api",
    "crates/hotmint-abci",
    "crates/hotmint-abci-proto",
    "crates/hotmint-staking",
    "crates/hotmint-light",
    "examples/demo",
    "examples/bench-consensus",
    "examples/bench-ipc",
    "examples/utxo-chain",
    "examples/cluster-node",
    "crates/hotmint-mgmt",
]

[workspace.package]
version = "0.8.4"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/NBnet/hotmint"
keywords = ["consensus", "tendermint", "hotstuff", "hotstuff2", "bft"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ruc = "9.3"
postcard = { version = "1.1", features = ["alloc"] }
blake3 = "1"
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core", "batch"] }
# rand stays at 0.8 for ed25519-dalek 2.x compat (uses rand_core 0.6)
rand = "0.8"
vsdb = "12.1.1"
litep2p = "0.13"
async-trait = "0.1"
futures = "0.3"
prometheus-client = "0.23"
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
hex = "0.4"
prost = "0.13"
zstd = "0.13"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12"

hotmint = { version = "0.8.4", path = "crates/hotmint" }
hotmint-types = { version = "0.8.4", path = "crates/hotmint-types" }
hotmint-crypto = { version = "0.8.4", path = "crates/hotmint-crypto" }
hotmint-consensus = { version = "0.8.4", path = "crates/hotmint-consensus" }
hotmint-storage = { version = "0.8.4", path = "crates/hotmint-storage" }
hotmint-network = { version = "0.8.4", path = "crates/hotmint-network" }
hotmint-mempool = { version = "0.8.4", path = "crates/hotmint-mempool" }
hotmint-api = { version = "0.8.4", path = "crates/hotmint-api" }
hotmint-abci = { version = "0.8.4", path = "crates/hotmint-abci" }
hotmint-abci-proto = { version = "0.8.4", path = "crates/hotmint-abci-proto" }
hotmint-staking = { version = "0.8.4", path = "crates/hotmint-staking" }
hotmint-light = { version = "0.8.4", path = "crates/hotmint-light" }
hotmint-mgmt = { version = "0.8.4", path = "crates/hotmint-mgmt" }
