[package]
name = "hotmint-mgmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cluster management library and CLI for Hotmint consensus nodes: init, deploy, and control multi-node BFT clusters."
keywords = ["consensus", "hotstuff2", "bft", "cluster", "management"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "hotmint_mgmt"
path = "src/lib.rs"

[[bin]]
name = "hotmint-mgmt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ruc = { workspace = true }
