[package]
name = "hotmint-storage"
description = "Persistent storage backends for Hotmint (vsdb)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
ruc = { workspace = true }
tracing = { workspace = true }
vsdb = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
