[package]
name = "hotmint-evm-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hotmint-evm"
path = "src/main.rs"

[dependencies]
hotmint = { workspace = true }
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-crypto = { workspace = true }
hotmint-evm-types = { workspace = true }
hotmint-evm-state = { workspace = true }
hotmint-evm-execution = { workspace = true }
hotmint-evm-rpc = { workspace = true }
hotmint-evm-txpool = { workspace = true }
hotmint-evm-precompile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ruc = { workspace = true }
clap = { workspace = true }
