[package]
name = "hotmint-evm-txpool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hotmint-evm-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ruc = { workspace = true }

[dev-dependencies]
k256 = { workspace = true }
rand = { workspace = true }
alloy-eips = { workspace = true }
